--- a/views/quests/index.ejs
+++ b/views/quests/index.ejs
@@ -1,10 +1,38 @@
 <%- include("../partials/header", {title: "Quests"}) %>
 
-<div style="text-align: center">
+<a
+  style="display: block; margin: 0 auto; max-width: fit-content"
+  href="/quests/new"
+  >new</a
+>
+<div
+  style="
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+  "
+>
   <% if ( quests ) { %> <% quests.forEach(function(quest) { %>
-  <div>
-    <a href="#"><%= quest.description %></a> by <%=
-    quest.assignee %>
+  <div
+    style="
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+    "
+  >
+    <div>
+      <%= quest.title %> <a href="/quests/<%= quest.quest_id  %>">full</a>
+    </div>
+    <form
+          action="/quests/<%= quest.quest_id  %>/delete"
+          method="post"
+          onsubmit="return confirm('Are you sure you want to delete this?')"
+        >
+          <button type="submit">delete</button>
+        </form>
   </div>
   <% }) %> <% } else { %>
   <div>No quests found.</div>
