--- a/views/characters/index.ejs
+++ b/views/characters/index.ejs
@@ -3,7 +3,7 @@
 <h2>Characters</h2>
 <a href="/characters/new">new</a>
 
-<table border="1" cellpadding="8" cellspacing="0">
+<table cellpadding="8" cellspacing="0">
   <thead>
     <tr>
       <th>Name</th>
