--- a/views/factions/index.ejs
+++ b/views/factions/index.ejs
@@ -2,7 +2,7 @@
 
 <h2>Factions</h2>
 <a href="/factions/new">new</a>
-<table border="1" cellpadding="8" cellspacing="0">
+<table  cellpadding="8" cellspacing="0">
   <thead>
     <tr>
       <th>Name</th>
