--- a/views/factions/new.ejs
+++ b/views/factions/new.ejs
@@ -12,7 +12,7 @@
   <label for="hiddenTruth">Hidden Truth:</label>
   <input type="text" name="hiddenTruth" id="hiddenTruth" />
 
-  <button type="submit">Submit</button>
+  <button type="submit" class="cool-class">Submit</button>
 </form>
 
 <%- include("../partials/footer") %>
