--- a/views/quests/new.ejs
+++ b/views/quests/new.ejs
@@ -24,7 +24,7 @@
     <% }); %>
   </fieldset>
 
-  <button type="submit">Submit</button>
+  <button type="submit" class="cool-class">Submit</button>
 </form>
 
 <%- include("../partials/footer") %>
